--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
 @import url("fonts.css");
 
 * {
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  font-size: 100%;
-  font-family: SegoeWPN;
-  color: #6c6c6c;
+	font-size: 100%;
+	font-family: SegoeWPN;
+	color: #6c6c6c;
 }
 
-img{
+img {
 	max-width: 100%;
 }
 
@@ -23,13 +24,15 @@ img{
 	padding: 5px;
 	background: #fff;
 }
+
 /* обертка для логотипа */
 .logo-wrap {
-	font-family: "Segoe WP Light"; 
+	font-family: "Segoe WP Light";
 	font-size: 200%;
 	color: #000;
 	padding: 5px;
 }
+
 /* маленький синий круг */
 .quotes-circle {
 	display: inline-block;
@@ -41,6 +44,7 @@ img{
 	position: relative;
 	top: 3px;
 }
+
 /* кавычки внутри синего круга */
 .quotes-circle:before {
 	content: "\201C";
@@ -51,16 +55,19 @@ img{
 	top: -7px;
 	left: 7px;
 }
+
 /* расположение текста логотипа */
 .logo {
 	display: inline-block;
 }
+
 /* ссылки меню  */
 .link-color {
-  color: #6c6c6c;
-  border-bottom: 2px solid #fff;
-  display: block;
- }
+	color: #6c6c6c;
+	border-bottom: 2px solid #fff;
+	display: block;
+}
+
 /* подчеркивание ссылок при наведении */
 .link-color:hover {
 	display: block;
@@ -70,31 +77,35 @@ img{
 /* Карусель */
 
 /* Фон подложка под слайды */
-.bg-item{
+.bg-item {
 	background: url(../images/bg.png) center center no-repeat;
 }
+
 /* Отступы у картинки iphone */
-.iphone-wrap{
+.iphone-wrap {
 	padding: 40px 100px 5px 8px;
 }
+
 /* Стили у текста карусели */
-.text-wrap{
+.text-wrap {
 	padding: 100px 0 80px 0;
 	color: #fff;
 	font-family: "Segoe WP Light";
 	font-size: 130%;
 	line-height: 40px;
 }
+
 /* Стилизация кнопки */
-.myButton{
+.myButton {
 	background: #5094f2;
 	font-size: 90%;
 	border: none;
 	border-radius: 2px;
 	padding: 0 10px;
 	color: #fff;
-	cursor; pointer;
+	cursor: pointer;
 }
+
 /* маленький белый круг */
 .white-circle {
 	display: inline-block;
@@ -106,6 +117,7 @@ img{
 	position: relative;
 	top: 4px;
 }
+
 /* галочка внутри белого круга */
 .white-circle:before {
 	content: "\2714";
@@ -116,61 +128,69 @@ img{
 	top: -9px;
 	left: 3px;
 }
+
 /* позиционирование левой стрелки */
-.carousel-control-prev-icon{
+.carousel-control-prev-icon {
 	position: relative;
 	right: 30%;
 }
+
 /* позиционирование правой стрелки */
-.carousel-control-next-icon{
+.carousel-control-next-icon {
 	position: relative;
 	left: 30%;
 }
 
 /* стили на разрешении менее 576 пикселей */
-@media (max-width: 576px) { 
-.iphone-wrap{
-	padding: 20px 50px 5px 18px;
-}
-.text-wrap{
-	padding: 40px 40px 40px 0;
-	font-size: 100%;
-}
-.text-wrap p{
-	line-height: 20px;
-	font-size: 70%;
-}
-.text-wrap h2{
-	font-size: 110%;
+@media (max-width: 576px) {
+	.iphone-wrap {
+		padding: 20px 50px 5px 18px;
+	}
+
+	.text-wrap {
+		padding: 40px 40px 40px 0;
+		font-size: 100%;
+	}
+
+	.text-wrap p {
+		line-height: 20px;
+		font-size: 70%;
+	}
+
+	.text-wrap h2 {
+		font-size: 110%;
+	}
+
 }
 
- }
- 
 /* Секция с иконками */
 
 /* Отступы от края секции с иконками */
-.icons{
+.icons {
 	margin-top: 70px;
 	font-family: "SegoeWPN";
 }
 
 /* Выравнивает текст по центру */
-.wrap-icons{
+.wrap-icons {
 	text-align: center;
 }
+
 /* Цвет заголовка и отступ */
-.wrap-icons h6{
+.wrap-icons h6 {
 	color: #7eadf5;
 	margin-top: 25px;
 }
+
 /* Цвет, шрифт текста */
-.wrap-icons p{
+.wrap-icons p {
 	color: #999;
 	font-size: 80%;
 	margin-bottom: 16px;
 }
+
 /* Круг под картинку-иконку */
-.icon-circle{
+.icon-circle {
 	display: block;
 	border-radius: 50%;
 	text-align: center;
@@ -180,24 +200,30 @@ img{
 	height: 170px;
 	position: relative;
 }
+
 /* Цвет круга */
-.blue{
+.blue {
 	background: #5094f2;
 }
+
 /* Цвет круга */
-.red{
+.red {
 	background: #d94748;
 }
+
 /* Цвет круга */
-.pink{
+.pink {
 	background: #ebbb11;
 }
+
 /* Картинки-иконки в центре */
-.image-icon{
+.image-icon {
 	position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
 }
 
 /* Секция с корзиной */
@@ -207,39 +233,28 @@ img{
 	padding: 80px 50px 120px 50px;
 	font-family: "SegoeWPN";
 }
+
 /* Выравнивает по центру */
-.cart-wrap{
+.cart-wrap {
 	text-align: center;
 	color: #6f7173;
 }
+
 /* Размер корзины */
-.cart-image{
+.cart-image {
 	max-width: 80%;
 	margin-top: 15px;
 }
+
 /* Отступ от верхней секции */
-.cart-text h4{
+.cart-text h4 {
 	margin-top: 50px;
 }
+
 /* Стили параграфа */
-.cart-text p{
+.cart-text p {
 	margin-top: 30px;
 	font-size: 80%;
 	line-height: 30px;
 	color: #999;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
